日常ページ内容修正

--- a/gallery.html
+++ b/gallery.html
@@ -68,9 +68,9 @@
           <div class="container">
             <h2 class="section-title">笑顔あふれる、武天の日常</h2>
             <p class="intro-text">
-              舞台でのかっこいい姿だけでなく、武天には温かく親しみやすい日常があります。<br>
+              武天には温かく親しみやすい日常があります。<br>
               子供から大人まで、みんなで和気あいあいと練習を楽しんでいます。<br>
-              そんな私たちの「素顔」を少しだけご紹介します。
+              そんな私たちの「素顔」をご紹介します。
             </p>
           </div>
         </section>
