--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
           <div class="hero-content">
             <h1>心に響く、<br />日本の音。</h1>
             <p>初心者からシニアまで、<br />誰もが楽しめる和太鼓教室</p>
-            <a href="contact.html" class="cta-button">体験レッスンを申し込む</a>
           </div>
           <div class="hero-bg-overlay"></div>
         </section>
@@ -92,27 +91,6 @@
             </p>
           </div>
         </section>
-
-        <section id="atmosphere" class="section-atmosphere">
-          <div class="container">
-            <h2 class="section-title">武天の日常</h2>
-            <div class="atmosphere-content">
-              <div class="atmosphere-image">
-                <img src="./public/images/gallery/practice.png" alt="みんなで楽しく練習中" loading="lazy">
-              </div>
-              <div class="atmosphere-text">
-                <p>
-                  武天の魅力は、舞台でのかっこいい演奏だけではありません。<br>
-                  普段の練習は笑顔が絶えない、とてもアットホームな雰囲気です。<br>
-                  子供から大人まで、仲間と一緒に太鼓を叩く楽しさを感じています。
-                </p>
-                <a href="gallery.html" class="cta-button" style="margin-top: 1rem;">武天の日常をもっと見る</a>
-              </div>
-            </div>
-          </div>
-        </section>
-
-
 
         <!-- Other sections to be populated -->
         <section id="class" class="section-class">
@@ -151,6 +129,25 @@
           </div>
         </section>
 
+                <section id="atmosphere" class="section-atmosphere">
+          <div class="container">
+            <h2 class="section-title">武天の日常</h2>
+            <div class="atmosphere-content">
+              <div class="atmosphere-image">
+                <img src="./public/images/gallery/practice.png" alt="みんなで楽しく練習中" loading="lazy">
+              </div>
+              <div class="atmosphere-text">
+                <p>
+                  武天の魅力は、舞台でのかっこいい演奏だけにとどまらず、<br>
+                  普段の練習は笑顔が絶えない、とてもアットホームな雰囲気です。<br>
+                  子供から大人まで、仲間と一緒に太鼓で笑い、喜びや感動、ワクワク、お互いの成長を感じています。
+                </p>
+                <a href="gallery.html" class="cta-button" style="margin-top: 1rem;">武天の日常をもっと見る</a>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section id="schedule" class="section-schedule">
           <div class="container">
             <h2 class="section-title">公演予定</h2>
@@ -179,8 +176,6 @@
             </div>
           </div>
         </section>
-
-
 
         <!-- Furusato Nozei Section -->
         <section id="furusato" class="section-furusato">
