日常ページ写真追加

--- a/index.html
+++ b/index.html
@@ -74,14 +74,16 @@
           </div>
           <div class="hero-content">
             <h1>心に響く、<br />日本の音。</h1>
-            <p>初心者からシニアまで、<br />誰もが楽しめる和太鼓教室</p>
+            <p>初心者からシニアまで、<br />誰もが楽しめる和太鼓</p>
+            <p>私たちは、笑顔あふれる仲間と共に、人とのつながりや、親子の絆を深め、世代を超えた和太鼓ライフを楽しんでいます！</p>
           </div>
           <div class="hero-bg-overlay"></div>
         </section>
 
         <section id="concept" class="section-concept">
           <div class="container">
-            <h2 class="section-title">和太鼓 武天</h2>
+            <h2 class="section-title">和太鼓 武天<br>
+            <span class="subtitle">wadaiko buten</span></h2>
             <p class="concept-text">
               和太鼓 武天（わだいこ ぶてん）は、東京都あきる野市を拠点に活動する和太鼓グループです。<br>
               会員約70名、小学1年生～70代で構成され、親子チーム、大人チーム、若者チームで活動。<br>
@@ -134,7 +136,7 @@
             <h2 class="section-title">武天の日常</h2>
             <div class="atmosphere-content">
               <div class="atmosphere-image">
-                <img src="./public/images/gallery/practice.png" alt="みんなで楽しく練習中" loading="lazy">
+                <img src="https://d329zuyuc98w3u.cloudfront.net/images/home/nitizyou15.jpg" alt="みんなで楽しく練習中" loading="lazy">
               </div>
               <div class="atmosphere-text">
                 <p>
