--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('./public/images/gallery/collage.png');">
+        <section class="page-header" style="background-image: url('public/gallery/nitizyou_header.jpg');">
           <div class="header-overlay"></div>
           <h1>武天の日常</h1>
           <p>Atmosphere & Daily Life</p>
@@ -83,10 +83,14 @@
               <p class="category-desc">真剣だけど、笑顔も絶えない練習の時間。初心者の方も丁寧にサポートします。</p>
               <div class="gallery-grid">
                 <div class="gallery-item">
-                  <img src="./public/images/gallery/practice.png" alt="みんなで楽しく練習中" loading="lazy">
-                  <div class="caption">みんなで楽しく練習中</div>
+                  <img src="public/gallery/nitizyou12.jpg" alt="クリスマス会の集合写真" loading="lazy">
+                  <div class="caption">クリスマス会</div>
                 </div>
-                <!-- More items can be added here -->
+                <div class="gallery-item">
+                  <img src="public/gallery/nitizyou8.jpg" alt="クリスマス会での演奏" loading="lazy">
+                  <div class="caption">クリスマス会での演奏</div>
+                </div>
+                <!-- 写真を追加する場合は、この gallery-item ブロックをコピーして増やしてください -->
               </div>
             </div>
 
@@ -95,12 +99,28 @@
               <p class="category-desc">本番前のリラックスした表情や、イベント終了後の達成感あふれる笑顔。</p>
               <div class="gallery-grid">
                 <div class="gallery-item">
-                  <img src="./public/images/gallery/behind.png" alt="休憩中のリラックスタイム" loading="lazy">
-                  <div class="caption">休憩中のリラックスタイム</div>
+                  <img src="public/gallery/nitizyou2.jpg" alt="本番前の舞台袖" loading="lazy">
+                  <div class="caption">本番前の舞台袖</div>
                 </div>
                 <div class="gallery-item">
-                  <img src="./public/images/gallery/event.png" alt="お祭りでの集合写真" loading="lazy">
-                  <div class="caption">お祭りでの集合写真</div>
+                  <img src="public/gallery/nitizyou3.jpg" alt="髪セット中" loading="lazy">
+                  <div class="caption">お兄さんに髪をセットしてもらう</div>
+                </div>
+                <div class="gallery-item">
+                  <img src="public/gallery/nitizyou4.jpg" alt="舞台袖での一幕" loading="lazy">
+                  <div class="caption">舞台袖での一幕</div>
+                </div>
+                <div class="gallery-item">
+                  <img src="public/gallery/nitizyou11.jpg" alt="クリスマス会の集合写真" loading="lazy">
+                  <div class="caption">クリスマス会の集合写真</div>
+                </div>
+                <div class="gallery-item">
+                  <img src="public/gallery/nitizyou10.jpg" alt="オフショット" loading="lazy">
+                  <div class="caption">オフショット</div>
+                </div>
+                <div class="gallery-item">
+                  <img src="public/gallery/nitizyou6.jpg" alt="仮装をしての出演" loading="lazy">
+                  <div class="caption">ハロウィンイベントに仮装をしての出演</div>
                 </div>
               </div>
             </div>
