スライドショー修正

--- a/index.html
+++ b/index.html
@@ -75,9 +75,14 @@
           <div class="hero-content">
             <h1>心に響く、<br />日本の音。</h1>
             <p>初心者からシニアまで、<br />誰もが楽しめる和太鼓</p>
-            <p>私たちは、笑顔あふれる仲間と共に、人とのつながりや、親子の絆を深め、世代を超えた和太鼓ライフを楽しんでいます！</p>
           </div>
           <div class="hero-bg-overlay"></div>
+        </section>
+
+        <section class="section-message">
+          <div class="container">
+            <p>私たちは、笑顔あふれる仲間と共に、人とのつながりや、親子の絆を深め、世代を超えた和太鼓ライフを楽しんでいます！</p>
+          </div>
         </section>
 
         <section id="concept" class="section-concept">
