武天の日常header変更3

--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,20 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('public/gallery/header_collage.jpg');">
+        <section class="page-header">
+          <div class="header-collage">
+            <!-- 10 images for collage -->
+            <div class="collage-item"><img src="public/gallery/nitizyou16.jpg" alt="Gallery 1"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou17.jpg" alt="Gallery 2"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou18.jpg" alt="Gallery 3"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou19.jpg" alt="Gallery 4"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou20.jpg" alt="Gallery 5"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou21.jpg" alt="Gallery 6"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou22.jpg" alt="Gallery 7"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou23.jpg" alt="Gallery 8"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou24.jpg" alt="Gallery 9"></div>
+            <div class="collage-item"><img src="public/gallery/nitizyou25.jpg" alt="Gallery 10"></div>
+          </div>
           <div class="header-overlay"></div>
           <h1>武天の日常</h1>
           <p>Atmosphere & Daily Life</p>
@@ -121,6 +134,10 @@
                 <div class="gallery-item">
                   <img src="public/gallery/nitizyou6.jpg" alt="仮装をしての出演" loading="lazy">
                   <div class="caption">ハロウィンイベントに仮装をしての出演</div>
+                </div>
+                <div class="gallery-item">
+                  <img src="public/gallery/nitizyou26.jpg" alt="出演の集合写真" loading="lazy">
+                  <div class="caption">出演での集合写真</div>
                 </div>
               </div>
             </div>
