--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@700&display=swap"
       rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Yuji+Mai&family=Yuji+Syuku&family=Zen+Old+Mincho:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./home.css" />
   </head>
@@ -81,7 +82,7 @@
 
         <section class="section-message">
           <div class="container">
-            <p>私たちは、笑顔あふれる仲間と共に、人とのつながりや、親子の絆を深め、世代を超えた和太鼓ライフを楽しんでいます！</p>
+            <p class="message-text">私たちは、笑顔あふれる仲間と共に、人とのつながりや、親子の絆を深め、世代を超えた和太鼓ライフを楽しんでいます！</p>
           </div>
         </section>
 
